WIP: add social auth with fauna integration

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,2 +1,4 @@
-NEXT_PUBLIC_FAUNADB_SECRET=<replace-with-generated-client-secret>
-NEXT_PUBLIC_FAUNADB_GRAPHQL_ENDPOINT=https://graphql.fauna.com/graphql
+FAUNADB_SECRET=<replace-with-generated-client-secret>
+
+GITHUB_ID=<replace-with-generated-client-secret>
+GITHUB_SECRET=<replace-with-generated-client-secret>
